spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -1117,6 +1117,8 @@ h2 {
 	height: 400px;
 	width: 480px;
 	background-color: #666;
+	justify-content: center;
+	align-items: center;
 	text-align: center;
 	padding: 0 auto;
 }
